--- a/register.html
+++ b/register.html
@@ -20,20 +20,27 @@
 	<![endif]-->
 </head>
 <body>
+<div class="container_self">
      <!-- header start -->
-	 <div class="navbar navbar-fixed-top">
-		  <div class="navbar-inner">
-			<div class="container-fluid">
-			  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </a>
-			 <a href="#"  class="brand" >Lihelper中国第一辅助平台</a>
-			 <div class="nav-collapse">
-			 <p class="navbar-text pull-right-self"><a href="#">我的Lihelper</a>|<a href="#">免费注册</a></p>
-			  </div><!--/.nav-collapse -->
-			</div>
+	 <div class="navbar  navbar-fixed-top">
+	      
+		  <div class="navbar-inner"> 
+				<div class="header-width">
+					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">	
+						<span class="icon-bar"></span>							
+						<span class="icon-bar"></span>							
+						<span class="icon-bar"></span>						
+					</button>
+					<a class="brand_self" href="index.html">Lihelper 中国第一Linux辅助平台</a>
+					<div class="nav-collapse collapse">							
+						<ul class="nav pull-right">							
+							<li ng-class="'active' | ifmatch:[currentItem,'setting(..*)?']"><a href="#/setting">我的Lihelper</a></li>			
+							<li class="divider-vertical"></li>								
+							<li ng-class="'active' | ifmatch:[currentItem,'logout']"><a href="register.html">注册</a></li>	
+							<li class="divider-vertical"></li>	
+						</ul>						
+					</div>
+				</div>
 		  </div>
 		</div>
 	<!-- header end-->
@@ -50,7 +57,7 @@
 			<input ng-model="password" ng-disabled="processing" type="password" id="password" placeholder="确认密码">
 	        <p></p> 			
 			<button type="submit" id="login" class="btn btn-primary" ng-disabled="processing"><i class="icon-user icon-white"></i> <span ng-bind-template="{{ loginText }}">免费注册</span></button>
-						<span class="help-inline" style="padding-left:20px">已有账号？请<a ng-click="showForgetPwdMsg=true" href="#" onClick="return false">登录</a></span>
+						<span class="help-inline" style="padding-left:20px">已有账号？请<a ng-click="showForgetPwdMsg=true" href="login.html">登录</a></span>
 					
 			</div>
 		</form>
@@ -75,7 +82,7 @@
 		</div>
     </div>
 	<!-- footer end -->
-
+</div>
 
 <!--[if lte IE 6]>
 <script src="lib/ie6warning/warning.js"></script>
