--- a/lihelper_app/forgetpwd.html
+++ b/lihelper_app/forgetpwd.html
@@ -51,7 +51,7 @@
             <h4>重置密码</h4>
          
           <form method="post" action="/send_password" class="register_form holding">
-                <div class="forget-psw-text">请输入<strong>注册时的邮箱地址</strong>,Doit.im会将重置密码的链接发送到您的邮箱中。</div>
+                <div class="forget-psw-text">请输入<strong>注册时的邮箱地址</strong>,Lihelper会将重置密码的链接发送到您的邮箱中。</div>
             <div class="input_box clearfix">
               <p class="input_wrap">
                       <label for="user_email" style="display:none">注册邮箱</label><br />
