update file of css and product/main.html

--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -44,10 +44,10 @@
 		</div>
 	<!-- header end-->
 	
-	<div class="main">
-<ul class="nav nav-tabs">
-  <li class="active">
-    <a href="#">首页</a>
+<div class="main">
+<ul class="nav nav-tabs" >
+  <li class="dropdown" class="active">
+    <a class="dropdown-toggle"  href="#">首页</a>
   </li>
   <li><a href="#">...</a></li>
   <li><a href="#">...</a></li>
