update the file

--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -44,13 +44,16 @@
 		</div>
 	<!-- header end-->
 	
-<div class="main">
+<div  class="main">
 <ul class="nav nav-tabs" >
-  <li class="dropdown" class="active">
-    <a class="dropdown-toggle"  href="#">首页</a>
+  <li class="active">
+    <a href="#"><i class="icon-align-right"></i>系统状态</a>
   </li>
-  <li><a href="#">...</a></li>
-  <li><a href="#">...</a></li>
+  <li><a href="#"> <i class="icon-cog"></i>系统操作</a></li>
+  <li><a href="#"><i class="icon-eye-open"></i>监控报警</a></li>
+  <li><a href="#"><i class="icon-search"></i>性能分析</a></li>
+  <li><a href="#"><i class="icon-plane"></i>高级功能</a></li>
+  <li><a href="#"><i class="icon-user"></i>交流社区</a></li>
 </ul>
 	</div>
 
