--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -44,17 +44,37 @@
 		</div>
 	<!-- header end-->
 	
-<div  class="main">
-<ul class="nav nav-tabs" >
-  <li class="active">
-    <a href="#"><i class="icon-align-right"></i>系统状态</a>
-  </li>
-  <li><a href="#"> <i class="icon-cog"></i>系统操作</a></li>
-  <li><a href="#"><i class="icon-eye-open"></i>监控报警</a></li>
-  <li><a href="#"><i class="icon-search"></i>性能分析</a></li>
-  <li><a href="#"><i class="icon-plane"></i>高级功能</a></li>
-  <li><a href="#"><i class="icon-user"></i>交流社区</a></li>
-</ul>
+	<div  class="main">
+		<ul class="nav nav-tabs nav-pills" >
+		  <li class="active">
+			<a href="#1" data-toggle="tab"><i class="icon-align-right"></i>系统状态</a>
+		  </li>
+		  <li><a href="#2" data-toggle="tab"> <i class="icon-cog"></i>系统操作</a></li>
+		  <li><a href="#3" data-toggle="tab"><i class="icon-eye-open"></i>监控报警</a></li>
+		  <li><a href="#4" data-toggle="tab"><i class="icon-search"></i>性能分析</a></li>
+		  <li><a href="#5" data-toggle="tab"><i class="icon-plane"></i>高级功能</a></li>
+		  <li><a href="#6" data-toggle="tab"><i class="icon-user"></i>交流社区</a></li>
+		</ul>
+		 <div class="tab-content">
+			<div class="tab-pane active" id="1">
+			  <p>这里是章节 1.</p>
+			</div>
+			<div class="tab-pane" id="2">
+			  <p>这里是章节 2.</p>
+			</div>
+			<div class="tab-pane"  id="3">
+			  <p>这里是章节 1.</p>
+			</div>
+			<div class="tab-pane" id="4">
+			  <p>这里是章节 2.</p>
+			</div>
+			<div class="tab-pane" id="5">
+			  <p>这里是章节 1.</p>
+			</div>
+			<div class="tab-pane" id="6">
+			  <p>这里是章节 2.</p>
+			</div>			
+		 </div>
 	</div>
 
 	<!-- footer start -->
