modify table border

--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -58,7 +58,7 @@
 		 <div class="tab-content">
 			<div class="tab-pane active" id="1">
 			    <div class="accordion" id="accordion2">
-            <div class="accordion-group">
+            <div class="accordion-group-self">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
                   基本信息
@@ -66,19 +66,53 @@
               </div>
               <div id="collapseOne" class="accordion-body collapse in">
                 <div class="accordion-inner">
-		  前一段时间一个段子说，某国的网民在因国土问题与中国网民争吵时说，我要打到北京，中国的网民非常淡然地回应，就你那经济水平，交得起过路费吗？这两天新的段子说，李白要是活在今天的话，估计一大半以上他的诗根本写不出来，因为名山大川的门票他根本买不起。
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>					
                 </div>
               </div>
             </div>
-            <div class="accordion-group">
+            <div class="accordion-group-self">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
                   运行状态
                 </a>
               </div>
-              <div id="collapseTwo" class="accordion-body collapse">
+              <div id="collapseTwo" class="accordion-body collapse in">
                 <div class="accordion-inner">
-		  目前，中国半数5A级景区门票达到100元，黄山门票10年来由80元涨至230元。山东曲阜称，与同类景区相比收费较低，仅收150元，不涨票价就丢身价。曲阜的孔庙、孔府和孔林，年收入1.5亿元左右，全部上缴了地方财政，但景区维护成本从未公开。
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>
+		            <p>
+						当前IP：
+					 </p>
+					 <p>
+						发行版本：
+					</p>
                 </div>
               </div>
             </div>
