--- a/lihelper_app/forgetpwd.html
+++ b/lihelper_app/forgetpwd.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en" ng-app="Lihelper">
 <head>
 	<meta charset="utf-8">
@@ -82,7 +82,7 @@
 		</div>
     </div>
 	<!-- footer end -->
-/div>
+
 
 <!--[if lte IE 6]>
 <script src="lib/ie6warning/warning.js"></script>
