--- a/lihelper_app/index.html
+++ b/lihelper_app/index.html
@@ -34,7 +34,7 @@
 					<a class="brand_self" href="index.html">Lihelper 中国第一Linux辅助平台</a>
 					<div class="nav-collapse collapse">							
 						<ul class="nav pull-right">							
-							<li ng-class="'active' | ifmatch:[currentItem,'setting(..*)?']"><a href="#/setting">我的Lihelper</a></li>			
+							<li ng-class="'active' | ifmatch:[currentItem,'setting(..*)?']"><a href="product/main.html">我的Lihelper</a></li>			
 							<li class="divider-vertical"></li>								
 							<li ng-class="'active' | ifmatch:[currentItem,'logout']"><a href="register.html">注册</a></li>	
 							<li class="divider-vertical"></li>	
