--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -182,11 +182,11 @@
   								<a class="close" data-dismiss="alert">×</a>
 								  <strong>警告！</strong>服务器重启会导致服务暂停，您真的需要重启服务器吗？
 							</div>
-						  <a href="#" class="btn btn-small btn-primary">确认重启</a>
+						  <a href="#" class="btn btn-small btn-danger btn-primary">确认重启</a>
 	        			</div>
             
 					<div class="modal-footer">
-              			<a href="#" class="btn" data-dismiss="modal">关闭</a>
+              			<a href="#" class="btn" data-dismiss="modal">退出</a>
             		</div>
           			</div>
 					<td><a data-toggle="modal" href="#machineControl" class="btn btn-small btn-primary">进入管理页面</a></td>
