update the file

--- a/lihelper_app/product/main.html
+++ b/lihelper_app/product/main.html
@@ -240,7 +240,22 @@
 					<td class="muted">流量状态报警</td>
 					<td><button class="btn btn-small btn-primary">进入设置</button></td>
 				   </tr>
-				</tbody>
+				   </tbody>
+				   
+				 <table class="table table-striped">  
+				<thead>
+				  	<tr>
+						<th>添加报警信息</th>
+				  	</tr>
+				</thead>
+				   <tbody>
+				     <tr>
+					<td>邮箱账户</td>
+					<td class="muted">just2test@163.com</td>
+				   </tr>
+				   </tbody>
+				</table>
+				
 				</table>
 		    	</div>
 			</div>
@@ -256,7 +271,7 @@
 			<div class="tab-pane" id="5">
 			  <p>这里需要一个JS实现很好用的编辑框</p>
 			</div>
-			<!--高级功能结束-->
+			<!--高级功能结束--> 
 			
 			<!--跳转到社区，这个层可以不要-->
 			<div class="tab-pane" id="6">
