修改用户首页布局

--- a/lihelper_app/LiHelper3/index_new.html
+++ b/lihelper_app/LiHelper3/index_new.html
@@ -11,23 +11,24 @@
 <div class="topbar">
 	<div class="container"> 
 		<h3 class="logo"><a href="http://www.lihelper.com">Lihelper</a></h3>
-		<ul class="nav nav-user">			
-			<i class="icon-user"></i><li><a href="">交流社区</a></li>
-			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#">我的LiHelper <b class="caret"></b></a>
-				<ul class="dropdown-menu">
-					<li><a href="">修改密码</a></li>
-					<li class="divider"></li>
-					<li><a href="">安全退出</a></li> 
-				</ul>
-			</li>
-		</ul>
+		<div class="nav-user">
+			<ul class="nav nav-pills">			
+				<li><a href=""><i class="icon-user"></i>交流社区</a></li>
+				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">我的Lihelper <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="">修改密码</a></li>
+						<li class="divider"></li>
+						<li><a href="">安全退出</a></li> 
+					</ul>
+				</li>
+			</ul>
+		</div>	
+	
 	</div> 
 </div>
 
 <div id="body" class="container">
-	<div class="clearfix">
-		<div class="app">
 			<div class="row">
 			    <!-- 左边的菜单项 -->
 				<div id="sidebar" >
@@ -64,10 +65,21 @@
 				
 				<!-- 右边的主体 -->
 				<div class="main span9-lihelper">
-				<div class="">
-				     <h1>这里是主体部分</h1>
-					 </div>
-					 <div class="footer">
+					<div class="">
+				        <h1>这里是主体部分</h1>
+					    <h1>这里是主体部分</h1>
+					    <h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+						<h1>这里是主体部分</h1>
+					</div>
+					
+					<div class="footer">
 						<a href="/about/">About</a> |
 						<a href="http://blog.lihelper.com/">Blog</a>|
 						<a href="http://www.lihelper.com" target="_blank">@lihelper</a>
@@ -75,8 +87,6 @@
 				</div>
 				<!-- 右边的主体结束-->
 			</div>
-		</div>
-	</div>
 </div>
 
 <script src="lib/jquery/jquery-1.8.2.min.js"></script>
