update the file

--- a/lihelper_app/LiHelper3/index_new.html
+++ b/lihelper_app/LiHelper3/index_new.html
@@ -78,7 +78,7 @@
 			  </hr>
 				  <div class="accordion" id="accordion2">
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 						  
 							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
 							  基本信息
@@ -108,7 +108,7 @@
 						  </div>
 					</div>
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 								<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
 								  运行状态
 								</a>
@@ -227,7 +227,7 @@
 				 <!--控制伸缩-->
 				 <div class="accordion" id="monitor1">
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#monitor1" href="#collapse-monitor">
 							  基础选项
 							</a>
@@ -385,7 +385,7 @@
 				 <!--容器伸缩控制-->
 				 <div class="accordion" id="monitor2">
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#monitor2" href="#collapse-container">
 							  容器选项
 							</a>
@@ -452,7 +452,7 @@
 				  <!--自定义控制伸缩-->
 				 <div class="accordion" id="monitor3">
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#monitor3" href="#collapse-self">
 							  自定义监控
 							</a>
@@ -477,7 +477,7 @@
 				 <!--报警信息设置伸缩-->
 				 <div class="accordion" id="monitor4">
 					<div class="accordion-group-self">
-						  <div class="accordion-heading">
+						  <div class="accordion-heading alert alert-info">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#monitor4" href="#collapse-setting">
 							  报警信息设置
 							</a>
