--- a/lihelper_app/lihelper4/index.html
+++ b/lihelper_app/lihelper4/index.html
@@ -42,7 +42,7 @@
 			<div class="slides_container">
 				<div class="slide slide-1">
 					<img src="images/slide_1.jpg" width="980" height="348" alt="最专业的网站数据监控服务商，全方位监控指定网站和竞争对手网站的各项数据，实时记录各网站运行数据；新增网站监控和服务器监控功能" />
-					<a href="/register.aspx">超级监控提供的网站数据监控服务：包括SEO监控和网站、服务器监控</a>
+					<a href="register.html">超级监控提供的网站数据监控服务：包括SEO监控和网站、服务器监控</a>
 				</div>
 				<div class="slide slide-2">
 					<img src="images/slide_2.jpg" width="980" height="348" alt="网站＋服务器双重监控" />
@@ -60,33 +60,31 @@
 		  <div class="row features">  
 				<div class="span6">
 				  <i class="bookmarking"></i>
-				  <h3>One place for your links</h3>
-				   <p>
-					   With Kippt it’s easy to collect all your links from apps and services. Set up syncs or use our browser extensions.
-					</p>
-					<a href="https://kippt.com/sync/">Learn more</a>
+				     <h3>便捷化管理及配置</h3>
+				     <p>便捷、快速的在线安装、部署服务站点，提供强大的文件管理功能，同时提供丰富实用的系统工具.</p><p></p>
+				     <a href="detail.html">更多信息</a>
 				</div>
 
 				<div class="span6">
 				  <i class="search"></i>
-				  <h3>Organized and archived</h3>
-				  <p>When you save something in Kippt, it’s  archived and there when you need it. Everything is archived and searchable.</p>
-				  <a href="https://kippt.com/archive/">Learn more</a>
+				  <h3>性能分析及优化</h3>
+				  <p>多维度分析网站服务器的整体性能，提供可视化性能报告，同时提供专业的优化方案，节约用户的资源成本</p><p></p>
+				  <a href="detail.html">更多信息</a>
 				</div>
 				
 				<div class="span6">
-				  <i class="collaborate"></i>
-				  <h3>Discover and share</h3>
-				  <p>Collect links with your colleagues for a certain project, to share what you know and follow what others are discovering.</p>
-				  <a href="https://kippt.com/discover/">Learn more</a>
+				  <i class="search"></i>
+				  <h3>网站服务器监控</h3>
+				  <p>监控服务器的CPU,内存,IO,网络等基础服务，还包括像Apache/PHP等应用服务的监控，实时发送报警信息</p><p></p>
+				  <a href="detail.html">更多信息</a>
 				</div>           
 		   </div>
 		</section>
 	</div>
  
 	<div class="home-discover">
-		 <section class="clearfix" style="padding:0px 0 15px">
-			 <h2>What others are discovering with Kippt</h2>
+		 <section class="clearfix" style="padding:0px 0 15px" >
+			 <h2>有谁在使用Lihelper？</h2>
 			 <div class="list-tabs" style="text-align:center; font-size:18px">
 				  <a href="https://kippt.com/discover/staff-picks" class="active">Staff Picks</a> |
 				  <a href="https://kippt.com/discover/popular">Popular</a> |
