server代码增加web页面

--- a/lihelper_server/src/main/webapp/main/index.html
+++ b/lihelper_server/src/main/webapp/main/index.html
@@ -39,8 +39,8 @@
 						  <div class="well-lihelper sidebar-nav">
 							<ul class="nav nav-list">
 							  <li class="nav-header"><i class="icon-align-right"></i>系统状态</li>
-							  <li><a href="javascript:asyncCall('#basic-info')">基础信息</a></li>
-							  <li class="active"><a href="#runable-state" data-toggle="tab">运行状态</a>
+							  <li class="active"><a href="javascript:showProduct('#base-info')" >基础信息</a></li>
+							  <li><a href="#base-info" data-toggle="tab">运行状态</a>
 							  </li><li class="divider"></li>
 							  <li class="nav-header"><i class="icon-cog"></i>系统操作</li>
 							  <li><a href="#sys-operation" data-toggle="tab">基本操作</a></li>
@@ -84,7 +84,7 @@
 							  基本信息
 							</a>
 						  </div>
-						  <div id="basic-info" class="accordion-body collapse in">
+						  <div id="collapseOne" class="accordion-body collapse in">
 							<div class="accordion-inner">
 								<p>
 									当前IP：
