--- a/lihelper_server/src/main/webapp/main/index.html
+++ b/lihelper_server/src/main/webapp/main/index.html
@@ -122,24 +122,8 @@
 						  </div>
 						  <div id="collapseTwo" class="accordion-body collapse in">
 							<div class="accordion-inner">
-								<p>
-									当前IP：
-								 </p>
-								 <p>
-									发行版本：
-								</p>
-								<p>
-									当前IP：
-								 </p>
-								 <p>
-									发行版本：
-								</p>
-								<p>
-									当前IP：
-								 </p>
-								 <p>
-									发行版本：
-								</p>
+								<div id="dynamicCpu"/>
+								<div id="dynamicMem"/>
 							</div>
 						  </div>
 					</div>
@@ -564,8 +548,7 @@
 
 <script src="lib/jquery/jquery-1.8.2.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
 <script type="text/javascript" src="js/ext-all.js"></script>
-<script type="text/javascript" src="js/line-demo.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
