--- a/lihelper_server/src/main/webapp/main/index.html
+++ b/lihelper_server/src/main/webapp/main/index.html
@@ -122,8 +122,8 @@
 						  </div>
 						  <div id="collapseTwo" class="accordion-body collapse in">
 							<div class="accordion-inner">
-								<div id="dynamicCpu"/>
-								<div id="dynamicMem"/>
+								<div id="dynamicCpu"></div>
+								<div id="dynamicMem"></div>
 							</div>
 						  </div>
 					</div>
@@ -234,26 +234,36 @@
 					<td>CPU阈值报警</td>
 					<td class="muted">CPU使用状态的报警</td>
 					<div id="cpuAlarm" class="modal hide fade" style="display: none; ">
-            			<div class="modal-header">
-              				<a class="close" data-dismiss="modal">×</a>
-              				<h3>CPU阈值设定</h3>
-            			</div>
-						<div class="modal-body">
-						  <p>
-							 设置报警范围：&nbsp;&nbsp;当CPU高于<input type="text" class="span1" placeholder="1-100">%的时候报警
-						  </p>
-						  <hr>
-						  设置报警选项：&nbsp;&nbsp;
-						  <div class="btn-group" data-toggle="buttons-checkbox">
-						  <button class="btn">开启邮箱报警</button>
-						  <button class="btn">开启短信报警</button>
-						  <!--这里少了一个div 但是加上会变形-->
-						</div>
-	        		</div>
-					<div class="modal-footer">
-              			<a href="#" class="btn" data-dismiss="modal">关闭</a>
-              			<a href="#" class="btn btn-primary">保存更改</a>
-            		</div>
+					    <form id="formCpuAlarm" name="formCpuAlarm" action="/lihelper/web/monitoralarm.action" method="post">
+							<div class="modal-header">
+								<a class="close" data-dismiss="modal">×</a>
+								<h3>CPU阈值设定</h3>
+							</div>
+							<div class="modal-body">
+								  <input type="hidden" name="client_id" value="2">
+							      <input type="hidden" name="alarm_type" value="basic">
+								  <input type="hidden" name="alarm_item" value="cpu">
+								  <p>
+									 设置报警范围：&nbsp;&nbsp;当CPU高于<input type="text" class="span1" placeholder="1-100" name="alarm_value">%的时候报警
+								  </p>
+								  <hr>
+								  <div class="control-group">
+									<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+									<div class="controls span2">
+										<label class="checkbox">
+											<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+										</label>
+										<label class="checkbox">
+											<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+										</label>								
+									</div>
+								  </div>
+							</div>
+							<div class="modal-footer">
+								<a href="#" class="btn" data-dismiss="modal">关闭</a>
+								<a href="#" class="btn btn-primary" id="cpuAlarmSave">保存更改</a>
+							</div>
+					    </form>
           			</div>
 					<td><a data-toggle="modal" href="#cpuAlarm" class="btn btn-small btn-primary">开始设置</a></td>
 				   </tr>
@@ -261,26 +271,36 @@
 					<td>内存阈值报警</td>
 					<td class="muted">内存使用状态报警</td>
 					<div id="memAlarm" class="modal hide fade" style="display: none; ">
+					   <form id="formMemAlarm" name="formMemAlarm" >
             			<div class="modal-header">
               				<a class="close" data-dismiss="modal">×</a>
               				<h3>内存阈值设定</h3>
             			</div>
 						<div class="modal-body">
+						  <input type="hidden" name="client_id" value="3">
+					      <input type="hidden" name="alarm_type" value="basic">
+						  <input type="hidden" name="alarm_item" value="mem">
 						  <p>
-							 设置报警范围：&nbsp;&nbsp;当内存高于<input type="text" class="span1" placeholder="1-100">%的时候报警
+							 设置报警范围：&nbsp;&nbsp;当内存高于<input type="text" class="span1" placeholder="1-100" name="alarm_value">%的时候报警
 						  </p>
 						  <hr>
-						  设置报警选项：&nbsp;&nbsp;
-						  <div class="btn-group" data-toggle="buttons-checkbox">
-						  <button class="btn">开启邮箱报警</button>
-						  <button class="btn">开启短信报警</button>
-						  <!--这里少了一个div 但是加上会变形-->
-						</div>
+						  <div class="control-group">
+							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+							<div class="controls span2">
+								<label class="checkbox">
+									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+								</label>
+								<label class="checkbox">
+									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+								</label>								
+							</div>
+						  </div>
 	        		</div>
 					<div class="modal-footer">
               			<a href="#" class="btn" data-dismiss="modal">关闭</a>
-              			<a href="#" class="btn btn-primary">保存更改</a>
+              			<a href="#" class="btn btn-primary" id="memAlarmSave">保存更改</a>
             		</div>
+            		</form>
           			</div>
 					<td><a data-toggle="modal" href="#memAlarm" class="btn btn-small btn-primary">开始设置</a></td>
 				   </tr>
@@ -288,26 +308,36 @@
 					<td>磁盘阈值报警</td>
 					<td class="muted">磁盘空间使用报警</td>
 					<div id="diskAlarm" class="modal hide fade" style="display: none; ">
+					    <form id="formIoAlarm" name="formIoAlarm" >
             			<div class="modal-header">
               				<a class="close" data-dismiss="modal">×</a>
               				<h3>磁盘阈值设定</h3>
             			</div>
 						<div class="modal-body">
+						  <input type="hidden" name="client_id" value="2">
+						  <input type="hidden" name="alarm_type" value="basic">
+						  <input type="hidden" name="alarm_item" value="io">			
 						  <p>
-							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100">%的时候报警
+							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100"  name="alarm_value">%的时候报警
 						  </p>
 						  <hr>
-						  设置报警选项：&nbsp;&nbsp;
-						  <div class="btn-group" data-toggle="buttons-checkbox">
-						  <button class="btn">开启邮箱报警</button>
-						  <button class="btn">开启短信报警</button>
-						  <!--这里少了一个div 但是加上会变形-->
-						</div>
+						  <div class="control-group">
+							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+							<div class="controls span2">
+								<label class="checkbox">
+									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+								</label>
+								<label class="checkbox">
+									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+								</label>								
+							</div>
+						  </div>
 	        		</div>
 					<div class="modal-footer">
               			<a href="#" class="btn" data-dismiss="modal">关闭</a>
-              			<a href="#" class="btn btn-primary">保存更改</a>
+              			<a href="#" class="btn btn-primary" id="ioAlarmSave">保存更改</a>
             		</div>
+					</form>
           			</div>
 					<td><a data-toggle="modal" href="#diskAlarm" class="btn btn-small btn-primary">开始设置</a></td>
 				   </tr>
@@ -324,12 +354,17 @@
 							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100">%的时候报警
 						  </p>
 						  <hr>
-						  设置报警选项：&nbsp;&nbsp;
-						  <div class="btn-group" data-toggle="buttons-checkbox">
-						  <button class="btn">开启邮箱报警</button>
-						  <button class="btn">开启短信报警</button>
-						  <!--这里少了一个div 但是加上会变形-->
-						</div>
+						  <div class="control-group">
+							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+							<div class="controls span2">
+								<label class="checkbox">
+									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+								</label>
+								<label class="checkbox">
+									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+								</label>								
+							</div>
+						  </div>
 	        		</div>
 					<div class="modal-footer">
               			<a href="#" class="btn" data-dismiss="modal">关闭</a>
@@ -351,12 +386,17 @@
 							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100">%的时候报警
 						  </p>
 						  <hr>
-						  设置报警选项：&nbsp;&nbsp;
-						  <div class="btn-group" data-toggle="buttons-checkbox">
-						  <button class="btn">开启邮箱报警</button>
-						  <button class="btn">开启短信报警</button>
-						  <!--这里少了一个div 但是加上会变形-->
-						</div>
+						  <div class="control-group">
+							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+							<div class="controls span2">
+								<label class="checkbox">
+									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+								</label>
+								<label class="checkbox">
+									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+								</label>								
+							</div>
+						  </div>
 	        		</div>
 					<div class="modal-footer">
               			<a href="#" class="btn" data-dismiss="modal">关闭</a>
