--- a/lihelper_server/src/main/webapp/main/index.html
+++ b/lihelper_server/src/main/webapp/main/index.html
@@ -308,7 +308,7 @@
 					<td>磁盘阈值报警</td>
 					<td class="muted">磁盘空间使用报警</td>
 					<div id="diskAlarm" class="modal hide fade" style="display: none; ">
-					    <form id="formIoAlarm" name="formIoAlarm" >
+					    <form id="formDiskAlarm" name="formDiskAlarm" >
             			<div class="modal-header">
               				<a class="close" data-dismiss="modal">×</a>
               				<h3>磁盘阈值设定</h3>
@@ -316,9 +316,46 @@
 						<div class="modal-body">
 						  <input type="hidden" name="client_id" value="2">
 						  <input type="hidden" name="alarm_type" value="basic">
-						  <input type="hidden" name="alarm_item" value="io">			
+						  <input type="hidden" name="alarm_item" value="disk">			
 						  <p>
 							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100"  name="alarm_value">%的时候报警
+						  </p>
+						  <hr>
+						  <div class="control-group">
+							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
+							<div class="controls span2">
+								<label class="checkbox">
+									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
+								</label>
+								<label class="checkbox">
+									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
+								</label>								
+							</div>
+						  </div>
+	        		</div>
+					<div class="modal-footer">
+              			<a href="#" class="btn" data-dismiss="modal">关闭</a>
+              			<a href="#" class="btn btn-primary" id="diskAlarmSave">保存更改</a>
+            		</div>
+					</form>
+          			</div>
+					<td><a data-toggle="modal" href="#diskAlarm" class="btn btn-small btn-primary">开始设置</a></td>
+				   </tr>
+				  <tr>
+					<td>IO阈值报警</td>
+					<td class="muted">IO负载状态报警</td>
+					<div id="ioAlarm" class="modal hide fade" style="display: none; ">
+					    <form id="formIoAlarm" name="formIoAlarm" >
+            			<div class="modal-header">
+              				<a class="close" data-dismiss="modal">×</a>
+              				<h3>IO阈值设定</h3>
+            			</div>
+						<div class="modal-body">
+						  <input type="hidden" name="client_id" value="2">
+						  <input type="hidden" name="alarm_type" value="basic">
+						  <input type="hidden" name="alarm_item" value="io">	
+						  <p>
+							 设置报警范围：&nbsp;&nbsp;当IO高于<input type="text" class="span1" placeholder="1-100" name="alarm_value">%的时候报警
 						  </p>
 						  <hr>
 						  <div class="control-group">
@@ -339,51 +376,23 @@
             		</div>
 					</form>
           			</div>
-					<td><a data-toggle="modal" href="#diskAlarm" class="btn btn-small btn-primary">开始设置</a></td>
-				   </tr>
-				  <tr>
-					<td>IO阈值报警</td>
-					<td class="muted">IO负载状态报警</td>
-					<div id="ioAlarm" class="modal hide fade" style="display: none; ">
-            			<div class="modal-header">
-              				<a class="close" data-dismiss="modal">×</a>
-              				<h3>磁盘阈值设定</h3>
-            			</div>
-						<div class="modal-body">
-						  <p>
-							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100">%的时候报警
-						  </p>
-						  <hr>
-						  <div class="control-group">
-							<p class="pull-left">设置报警选项：&nbsp;&nbsp;</p>
-							<div class="controls span2">
-								<label class="checkbox">
-									<input type="checkbox" value="email" id="alarm_mode" name="alarm_mode"> 开启邮箱报警
-								</label>
-								<label class="checkbox">
-									<input type="checkbox" value="message" id="alarm_mode" name="alarm_mode"> 开启短信报警
-								</label>								
-							</div>
-						  </div>
-	        		</div>
-					<div class="modal-footer">
-              			<a href="#" class="btn" data-dismiss="modal">关闭</a>
-              			<a href="#" class="btn btn-primary">保存更改</a>
-            		</div>
-          			</div>
 					<td><a data-toggle="modal" href="#ioAlarm" class="btn btn-small btn-primary">开始设置</a></td>
 				   </tr>
 				   <tr>
 					<td>流量阈值报警</td>
 					<td class="muted">流量状态报警</td>
 					<div id="flowAlarm" class="modal hide fade" style="display: none; ">
+					 <form id="formNetworkAlarm" name="formNetworkAlarm" >
             			<div class="modal-header">
               				<a class="close" data-dismiss="modal">×</a>
-              				<h3>磁盘阈值设定</h3>
+              				<h3>流量阈值设定</h3>
             			</div>
 						<div class="modal-body">
-						  <p>
-							 设置报警范围：&nbsp;&nbsp;当磁盘高于<input type="text" class="span1" placeholder="1-100">%的时候报警
+						  <input type="hidden" name="client_id" value="2">
+						  <input type="hidden" name="alarm_type" value="basic">
+						  <input type="hidden" name="alarm_item" value="network">	
+						<p>
+							 设置报警范围：&nbsp;&nbsp;当流量高于<input type="text" class="span1" placeholder="1-100" name="alarm_value">%的时候报警
 						  </p>
 						  <hr>
 						  <div class="control-group">
@@ -400,8 +409,9 @@
 	        		</div>
 					<div class="modal-footer">
               			<a href="#" class="btn" data-dismiss="modal">关闭</a>
-              			<a href="#" class="btn btn-primary">保存更改</a>
+              			<a href="#" class="btn btn-primary" id="networkAlarmSave">保存更改</a>
             		</div>
+					</form>
           			</div>
 					<td><a data-toggle="modal" href="#flowAlarm" class="btn btn-small btn-primary">开始设置</a></td>
 				   </tr>
