--- a/lihelper_server/src/main/webapp/index.html
+++ b/lihelper_server/src/main/webapp/index.html
@@ -21,7 +21,7 @@
 	  <a href="index.html" class="brand"><img src="images/kippt-logo-86.png" alt="Kippt" width="86" height="46"></a>
 	  <div class="nav-collapse">       
 		  <ul class="nav actions">
-			  <li><a href="login.html" data-link="modal" data-target="#login-modal">登录</a></li>
+			  <li><a href="login.jsp" data-link="modal" data-target="#login-modal">登录</a></li>
 			  <li><a href="register.html" data-link="modal" data-target="#signup-modal">注册</a></li>
 		  </ul>          
 		<ul class="nav">
